# mesh-llm

./: .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  LLAMA_CPP_SHA  MLX_ROADMAP.md  MLX_VALIDATION_MATRIX.md  PLUGINS.md  README.md
.codex-local/: run_validation_case.sh
.github/workflows/: behavior.yml  ci.yml  compat-matrix.yml  debug-slim-cache.yml  docker.yml  release.yml  warm-caches.yml
bindings/: README.md
docker/: Dockerfile.client  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan  entrypoint.sh
docs/: CI_GUIDANCE.md  CLI.md  index.html
fly/: Dockerfile
mesh-api/: README.md
mesh-api-ffi/: README.md
mesh-api-ffi/src/: lib.rs
mesh-api-ffi/tests/: smoke.rs
mesh-api/src/: client.rs
mesh-client/: Cargo.toml
mesh-ffi/: Cargo.toml
mesh-ffi/src/: lib.rs  mesh_ffi.udl
mesh-ffi/tests/: error_mapping.rs  smoke.rs
mesh-llm/: Cargo.toml  README.md  TODO.md  build.rs
mesh-llm-test-harness/src/: lib.rs
mesh-llm/docs/: DESIGN.md  EMBEDDED_CLIENT_ADR.md  INFERENCE_PLUGIN_ARCHITECTURE.md  (+9 more)
moe/: MOE_CLI_PLAN.md
mom/: RESULTS.md  eval-agent.sh
scripts/: build-linux-amd.sh  build-linux.sh  build-mac.sh  build-release.sh  build-windows.ps1  ci-exact-smoke.py  ci-gguf-smoke-test.sh  ci-mlx-smoke-test.sh  ci-mt-bench-behavior.py  ci-sdk-fixture.sh  ci-smoke-test.sh  download-origin-checkpoints-studio54.sh  install-windows-sdk.ps1  mlx-parity-exact.tsv  package-release.ps1  package-release.sh  prepare-swift-package-release.sh  release-version.sh  reset-swift-package-manifest.sh  run-validation-matrix.py
(+279 files in other folders)
