[workspace]
members = [
    "mesh-llm",
    "mesh-llm/plugin",
    "mesh-llm/src/plugins/example",
    "mesh-llm/src/plugins/mlx-native",
]
default-members = [
    "mesh-llm",
    "mesh-llm/plugin",
    "mesh-llm/src/plugins/example",
]
resolver = "2"

[patch."https://github.com/oxideai/mlx-rs"]
mlx-rs = { git = "https://github.com/i386/mlx-rs", rev = "35496079b9be8565e1330ffb24900a8974539c8f", package = "mlx-rs" }
mlx-lm = { git = "https://github.com/i386/mlx-rs", rev = "35496079b9be8565e1330ffb24900a8974539c8f", package = "mlx-lm" }
mlx-lm-utils = { git = "https://github.com/i386/mlx-rs", rev = "35496079b9be8565e1330ffb24900a8974539c8f", package = "mlx-lm-utils" }
